Align mobile nav right, fix mobile news header image sizing

--- a/wp-content/themes/unity-child/resources/assets/styles/components/_header.scss
+++ b/wp-content/themes/unity-child/resources/assets/styles/components/_header.scss
@@ -32,7 +32,7 @@
             width: auto;
             height: auto;
             line-height: 3em;
-            text-align: left;
+            text-align: right;
           }
 
           &:hover, &:focus, &:active {
