--- a/wp-content/themes/unity-child/resources/assets/styles/layouts/_news.scss
+++ b/wp-content/themes/unity-child/resources/assets/styles/layouts/_news.scss
@@ -11,6 +11,9 @@
       left: 50%;
       top: 50%;
       transform: translate3d(-50%, -50%, 0);
+      width: 100%;
+      height: 100%;
+      max-width: none;
     }
   }
 
